--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ h3#subheading2 {
     min-height: 200px;
     background: #FFFFFF;
     box-shadow: 10px 4px 20px 3px rgba(0, 0, 0, 0.11);
+    text-align: center;
     border-radius: 10px;
 }
 
@@ -194,6 +195,7 @@ h3#subheading2 {
 
 .review-box2 {
     text-align: center;
+    word-wrap: break-word;
     min-width: 220px;
     min-height: 200px;
     font-family:serif;
@@ -221,6 +223,10 @@ h3#subheading2 {
     transition-duration: 0.5s;
 
     
+}
+
+.review-box2 p {
+    padding-top: 30px;
 }
 
 .contact-button {
